[gd_scene load_steps=6 format=3 uid="uid://8psyp4shj78y"]

[ext_resource type="Script" uid="uid://c0d1bigegpdfl" path="res://Scripts/craftingUI.gd" id="1_sac6m"]

[sub_resource type="Theme" id="Theme_sac6m"]

[sub_resource type="Theme" id="Theme_c5m30"]

[sub_resource type="LabelSettings" id="LabelSettings_xy40y"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_2idwb"]

[node name="CraftingUI" type="CanvasLayer"]
script = ExtResource("1_sac6m")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -360.0
offset_right = 240.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_sac6m")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(480, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c5m30")
theme_override_constants/separation = 8

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "close"

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Crafting
"
label_settings = SubResource("LabelSettings_xy40y")
horizontal_alignment = 1

[node name="CategoryTabs" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="RecipeList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="CraftButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = SubResource("Theme_2idwb")
text = "Craft"
